完成：畫面建議完成，差程式碼建議

--- a/allstar.html
+++ b/allstar.html
@@ -91,7 +91,7 @@
             />
           </div>
           <div class="text-center allstartext_rwd">
-            <p class="text-nbaRed mt-3">NO.1</p>
+            <p class="text-nbaBlue mt-3">NO.1</p>
             <h3 class="">
               KOBE <span class="br"><br /></span>
               BRYANT
@@ -114,7 +114,7 @@
             />
           </div>
           <div class="text-center allstartext_rwd">
-            <p class="text-nbaRed mt-3">NO.2</p>
+            <p class="text-nbaBlue mt-3">NO.2</p>
             <h3>LEBRON JAMES</h3>
             <p>KING JAMES</p>
           </div>
@@ -134,7 +134,7 @@
             />
           </div>
           <div class="text-center allstartext_rwd">
-            <p class="text-nbaRed mt-3">NO.3</p>
+            <p class="text-nbaBlue mt-3">NO.3</p>
             <h3>STEPHEN CURRY</h3>
             <p>LOGOSHOOT GOD</p>
           </div>
@@ -154,7 +154,7 @@
             />
           </div>
           <div class="text-center allstartext_rwd">
-            <p class="text-nbaRed mt-3">NO.4</p>
+            <p class="text-nbaBlue mt-3">NO.4</p>
             <h3 class="text-center">
               RUSSELL <br />
               WESTBROOK
@@ -177,7 +177,7 @@
             />
           </div>
           <div class="text-center allstartext_rwd">
-            <p class="text-nbaRed mt-3">NO.5</p>
+            <p class="text-nbaBlue mt-3">NO.5</p>
             <h3>
               KRIE <span class="br"><br /></span> IRVING
             </h3>
