--- a/allstarStory.html
+++ b/allstarStory.html
@@ -73,7 +73,7 @@
       <!-- 銷售排行 -->
       <div
         id="Ranking"
-        class="d-flex justify-content-center align-items-center text-black mt-5"
+        class="d-flex justify-content-center align-items-center text-dark mt-5"
       >
         <h2>PLAYER</h2>
         <img
@@ -89,7 +89,7 @@
       </p>
       <div class="row row-cols-1 row-cols-lg-3 rank_card mx-2">
         <div class="col mb-5 mt-7 mb-lg-0">
-          <div class="card position-relative shadow" style="height: 424px">
+          <div class="card " style="height: 424px">
             <img
               data-num="001"
               src="nbaWeb/PNG-images-NBA-Players-41png.png"
@@ -111,17 +111,15 @@
                 75th Anniversary Team in 2021.
               </p>
             </div>
-            <div class="sell_more">
               <a
-                href="allstarListItem.html"
-                class="d-block text-center text-decoration-none link-pick_black pb-2"
+                href="allstarStoryItem.html"
+                class="d-block text-center text-decoration-none  pb-2 text-dark"
                 >MORE</a
               >
-            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
-          <div class="card position-relative shadow" style="height: 424px">
+          <div class="card" style="height: 424px">
             <img
               data-num="002"
               src="nbaWeb/PNG-images-NBA-Players-28png.png"
@@ -143,14 +141,14 @@
             <div class="sell_more">
               <a
                 href="#"
-                class="d-block text-center text-decoration-none link-pick_black pb-2 stretched-link"
+                class="d-block text-center text-decoration-none text-dark pb-2 stretched-link"
                 >MORE</a
               >
             </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
-          <div class="card position-relative shadow" style="height: 424px">
+          <div class="card" style="height: 424px">
             <img
               data-num="003"
               src="nbaWeb/PNG-images-NBA-Players-1png.png"
@@ -174,14 +172,14 @@
             <div class="sell_more">
               <a
                 href="#"
-                class="d-block text-center text-decoration-none link-pick_black pb-2 "
+                class="d-block text-center text-decoration-none text-dark pb-2 "
                 >MORE</a
               >
             </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
-          <div class="card position-relative shadow" style="height: 424px">
+          <div class="card " style="height: 424px">
             <img
               data-num="004"
               src="nbaWeb/PNG-images-NBA-Players-58png.png"
@@ -205,14 +203,14 @@
             <div class="sell_more">
               <a
                 href="#"
-                class="d-block text-center text-decoration-none link-pick_black pb-2 "
+                class="d-block text-center text-decoration-none text-dark pb-2 "
                 >MORE</a
               >
             </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
-          <div class="card position-relative shadow" style="height: 424px">
+          <div class="card" style="height: 424px">
             <img
               data-num="005"
               src="nbaWeb/PNG-images-NBA-Players-60png.png"
@@ -236,14 +234,14 @@
             <div class="sell_more">
               <a
                 href="#"
-                class="d-block text-center text-decoration-none link-pick_black pb-2 ""
+                class="d-block text-center text-decoration-none text-dark pb-2 ""
                 >MORE</a
               >
             </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
-          <div class="card position-relative shadow" style="height: 424px">
+          <div class="card  " style="height: 424px">
             <img
               data-num="006"
               src="nbaWeb/PNG-images-NBA-Players-70png.png"
@@ -267,7 +265,7 @@
             <div class="sell_more">
               <a
                 href="#"
-                class="d-block text-center text-decoration-none link-pick_black pb-2"
+                class="d-block text-center text-decoration-none text-dark pb-2"
                 >MORE</a
               >
             </div>
@@ -277,10 +275,10 @@
 
       <!-- 分頁 -->
       <!-- nav 不加class / 分頁有內建d-flex -->
-      <div class="pagination p1 justify-content-center my-5">
+      <div class="pagination justify-content-center my-5">
         <ul class="">
           <a href="#"><li><</li></a>
-          <a class="is-active" href="#"><li>1</li></a>
+          <a href="#"><li>1</li></a>
           <a href="#"><li>2</li></a>
           <a href="#"><li>3</li></a>
           <a href="#"><li>4</li></a>
