--- a/allstarStoryItem.html
+++ b/allstarStoryItem.html
@@ -74,7 +74,7 @@
       <!-- 銷售排行 -->
       <div
         id="Ranking"
-        class="d-flex justify-content-center align-items-center text-nbaRed mt-5"
+        class="d-flex justify-content-center align-items-center text-dark mt-5"
       >
         <h2>PLAYER</h2>
         <img
@@ -134,10 +134,8 @@
               </div>
             </div>
           </div>
-          <div class="col col-xl-4" style="z-index: 5">
-            <div
-              class="card position-relative shadow mb-5 text-center text-xl-start"
-            >
+          <div class="col col-xl-4 small_card" style="z-index: 5">
+            <div class="card mb-5 text-center text-xl-start">
               <img
                 data-num="001"
                 src="nbaWeb/PNG-images-NBA-Players-41png.png"
@@ -158,10 +156,12 @@
                   <li class="mb-3">2008</li>
                 </ul>
               </div>
-              <button
-                class="btn btn-pickYellow rounded-pill mx-auto mb-4 btnRwd"
-              >
-                <a href="#" class="px-5 d-block fs-4">MERCH</a>
+              <button class="btn btn-nbaBlue rounded-pill mx-auto mb-4 btnRwd">
+                <a
+                  href="newproduct.html"
+                  class="px-5 d-block fs-4 text-white text-decoration-none"
+                  >MERCH</a
+                >
               </button>
             </div>
           </div>
