--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <nav class="navbar navbar-expand-md bg-white">
         <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
-            <a class="navbar-brand" href="#">JerseyTown</a>
+            <a class="navbar-brand" href="index.html">JerseyTown</a>
             <a class="align-self-center text-decoration-none" href="index.html">
               <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
             </a>
@@ -40,25 +40,28 @@
             <!-- margin-start 自動推到底 好用排版方式 -->
             <ul class="navbar-nav ms-auto text-center">
               <li class="nav-item">
-                <a class="nav-link p-3" aria-current="page" href="index.html"
+                <a
+                  class="nav-link px-4 py-3"
+                  aria-current="page"
+                  href="index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="allstarListItem.html">Story</a>
+                <a class="nav-link px-4 py-3" href="allstarStory.html">Story</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="newproduct.html">Product</a>
+                <a class="nav-link px-4 py-3" href="newproduct.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link p-3" href="allstar.html">Rank</a>
+                <a class="nav-link px-4 py-3" href="allstar.html">Rank</a>
               </li>
               <li class="ms-1">
                 <button
-                  class="btn btn-nbaRed rounded-pill p-2 mt-lg-2 bg-nbaBlue nav_pill"
+                  class="btn btn-nbaRed rounded-pill mt-lg-2 bg-nbaBlue nav_pill"
                 >
                   <a
-                    class="text-decoration-none fs-6 d-block"
+                    class="text-decoration-none fs-6 px-5 py-1 rounded-pill"
                     type="submit"
                     href="customzied.html"
                   >
@@ -101,14 +104,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="12000">
             <!-- 加寬度100%不錯位跑版 -->
-            <video
-              width="1440"
-              height="810"
-              class="w-100"
-              controls
-              muted
-              autoplay
-            >
+            <video width="1440" height="810" class="w-100" controls muted>
               <source
                 src="./nbaWeb/Miami Heat vs. Memphis Grizzlies Full Game Highlights _ Oct 7 _ 2022 NBA Preseason.mp4"
                 type="video/mp4"
@@ -155,7 +151,7 @@
         </div>
         <div class="col" style="max-width: 380px">
           <div class="money w-100">
-            <p class="fs-4 text-nbaBlue">Service</p>
+            <p class="fs-4 text-nbaBlue text-center text-lg-start">Service</p>
             <h2 class="">EVERYBODY FUNDRAISING</h2>
             <p class="fs-6">
               The Association of Jersey Charities exists to provide guidance to
@@ -312,8 +308,8 @@
               </p>
             </div>
             <a
-              href="allstarListItem.html"
-              class="text-center text-decoration-none pb-2 stretched-link text-dark text-dark"
+              href="allstarStoryItem.html"
+              class="text-center text-decoration-none pb-2 stretched-link text-dark"
               >MORE</a
             >
           </div>
@@ -339,7 +335,7 @@
               </p>
             </div>
             <a
-              href="allstarListItem.html"
+              href="allstarStoryItem.html"
               class="text-center text-decoration-none pb-2 stretched-link text-dark"
               >MORE</a
             >
@@ -368,7 +364,7 @@
               </p>
             </div>
             <a
-              href="allstarListItem.html"
+              href="allstarStoryItem.html"
               class="text-center text-decoration-none pb-2 btn-outline-dark text-dark"
               >MORE</a
             >
@@ -379,7 +375,7 @@
       <div class="sell_more text-center">
         <a
           type="button"
-          href="allstarList.html"
+          href="allstarStory.html"
           class="btn btn-outline-dark rounded-pill my-5 fs-5 sellbtn_Rwd"
           >SEE MORE LISTS</a
         >
