完成：應避免額外限制寬度或者加入額外間距

--- a/index.html
+++ b/index.html
@@ -136,23 +136,23 @@
       <!-- row 都加 flex-row 比較清楚~~~ -->
       <div
         id="Service"
-        class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-md-2 pt-5 mx-md-5 px-md-5 mx-1 px-1 g-5"
+        class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-lg-2 pt-5 mx-6 px-0 px-lg-7 g-5"
       >
         <div
           class="col d-flex align-items-center justify-content-center me-md-5"
         >
           <img
-            class="of-cover money_img w-100"
+            class="of-cover w-100"
             height="486"
             width="648"
             src="../nbaWeb/andre-hunter-RPKdvPcYAUo-unsplash.jpg"
             alt="義賣球衣"
           />
         </div>
-        <div class="col" style="max-width: 380px">
+        <div class="col">
           <div class="money w-100">
             <p class="fs-4 text-nbaBlue text-center text-lg-start">Service</p>
-            <h2 class="">EVERYBODY FUNDRAISING</h2>
+            <h2 class="text-center text-lg-start">EVERYBODY FUNDRAISING</h2>
             <p class="fs-6">
               The Association of Jersey Charities exists to provide guidance to
               and be a source of funding for its members. <br />
