應多利用 HTML5 語易化標籤

--- a/allstar.html
+++ b/allstar.html
@@ -71,13 +71,14 @@
         </div>
       </nav>
       <!-- banner -->
-      <div class="allstar_banner bgs-cover"></div>
+      <banner class="allstar_banner bgs-cover"></banner>
       <!-- allstar -->
-      <div
+      <section
         class="row row-cols-1 row-cols-xl-5 mx-5 my-5 g-3 justify-content-around"
       >
+        <!-- col-12 col-xl-2 多餘的 -->
         <div
-          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+          class="d-flex flex-xl-column align-items-center justify-content-start"
         >
           <div
             class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
@@ -100,7 +101,7 @@
           </div>
         </div>
         <div
-          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+          class="d-flex flex-xl-column align-items-center justify-content-start"
         >
           <div
             class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
@@ -120,7 +121,7 @@
           </div>
         </div>
         <div
-          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+          class="d-flex flex-xl-column align-items-center justify-content-start"
         >
           <div
             class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
@@ -140,7 +141,7 @@
           </div>
         </div>
         <div
-          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+          class="d-flex flex-xl-column align-items-center justify-content-start"
         >
           <div
             class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
@@ -163,7 +164,7 @@
           </div>
         </div>
         <div
-          class="col-12 col-xl-2 d-flex flex-xl-column align-items-center justify-content-center"
+          class="d-flex flex-xl-column align-items-center justify-content-start"
         >
           <div
             class="allstar_bg d-flex justify-content-center align-items-center me-5 me-xl-0"
@@ -184,7 +185,7 @@
             <p>DRIBBLE GOD</p>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 徵才 -->
       <div class="container-lg border-nbaRed border-top border-3">
