--- a/customzied.html
+++ b/customzied.html
@@ -71,10 +71,10 @@
         </div>
       </nav>
       <!-- banner -->
-      <div class="custom_banner bgp-top bgs-cover"></div>
+      <banner class="custom_banner bgp-top bgs-cover"></banner>
       <!-- 註冊客製化球衣 -->
       <form
-        class="card py-5 px-4 col-md-5 needs-validation w-75 mx-auto my-5 shadow border-5 border-nbaRed border-top border-start-0 border-end-0 border-bottom-0"
+        class="card py-5 px-4 col-md-5 needs-validation w-75 mx-auto my-5 shadow border-5 border-nbaBlue border-top border-start-0 border-end-0 border-bottom-0"
         novalidate
       >
         <h2 class="text-center fs-4 mb-5">CUSTOMZIED ORDER LIST</h2>
