--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
       </nav>
       <!-- video banner -->
-      <div
+      <banner
         id="carouselExampleIndicators"
         class="carousel slide"
         data-bs-ride="carousel"
@@ -129,12 +129,12 @@
             />
           </div>
         </div>
-      </div>
+      </banner>
       <!-- banner -->
       <!-- <div class="banner bgs-cover"></div> -->
       <!-- 募款 -->
       <!-- row 都加 flex-row 比較清楚~~~ -->
-      <div
+      <section
         id="Service"
         class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-lg-2 pt-5 mx-6 px-0 px-lg-7 g-5"
       >
@@ -167,7 +167,7 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
       <!-- 最新球衣 -->
       <div
         id="Product"
@@ -182,7 +182,7 @@
         />
         <h2>PRODUCTS</h2>
       </div>
-      <div class="row row-cols-2 row-cols-lg-4 g-4 px-3">
+      <section class="row row-cols-2 row-cols-lg-4 g-4 px-3">
         <div class="col overflow-hidden">
           <div class="card w-100 position-relation" data-num="1">
             <div class="new_product_img">
@@ -247,7 +247,7 @@
             />
           </div>
         </div>
-      </div>
+      </section>
 
       <div
         class="text-center mt-4 d-flex flex-column flex-md-row justify-content-center"
@@ -280,10 +280,10 @@
         />
         <h2>SELLING</h2>
       </div>
-      <p class="fs-6 text-pickBlack text-center mb-5">
+      <p class="fs-6 text-dark text-center mb-5">
         which are the top-selling NBA jerseys?
       </p>
-      <div class="row row-cols-1 row-cols-lg-3 g-4 rank_card mx-2 mt-5">
+      <section class="row row-cols-1 row-cols-lg-3 g-4 rank_card mx-2 mt-5">
         <div class="col mb-5 mb-lg-0">
           <div class="card" style="height: 424px">
             <img
@@ -370,9 +370,9 @@
             >
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="sell_more text-center">
+      <div class="text-center">
         <a
           type="button"
           href="allstarStory.html"
@@ -381,7 +381,7 @@
         >
       </div>
       <!-- 徵才 -->
-      <div class="container-lg border-nbaBlue border-top border-3">
+      <section class="container-lg border-nbaBlue border-top border-3">
         <div
           class="row row-cols-1 row-cols-lg-2 d-flex flex-column flex-md-row justify-content-center align-items-center mb-5 mt-5 gap-0"
         >
@@ -422,7 +422,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </section>
       <!-- 小圖示 -->
       <a href="customzied.html">
         <img
@@ -439,9 +439,9 @@
         />
       </a>
 
-      <div class="footer bg-dark text-center text-white py-2 pt-4">
+      <footer class="footer bg-dark text-center text-white py-2 pt-4">
         <p>Copyright © 2022 JerseyTown.All rights reserved.</p>
-      </div>
+      </footer>
     </div>
     <script
       src="https://code.jquery.com/jquery-3.6.1.slim.min.js"
