--- a/allstarStory.html
+++ b/allstarStory.html
@@ -79,15 +79,15 @@
         <img
           src="nbaWeb/Lovepik_com-401319703-basketball.png"
           height="80"
-          alt="sellLogo"
+          alt="storylogo"
           class=""
         />
         <h2>STORY</h2>
       </div>
-      <p class="fs-6 text-pickBlack text-center mb-3">
+      <p class="fs-6 text-dark text-center mb-3">
         how to become the NBA all star player?
       </p>
-      <div class="row row-cols-1 row-cols-lg-3 rank_card mx-2">
+      <section class="row row-cols-1 row-cols-lg-3 rank_card mx-2">
         <div class="col mb-5 mt-7 mb-lg-0">
           <div class="card " style="height: 424px">
             <img
@@ -138,13 +138,11 @@
                 most career assists.
               </p>
             </div>
-            <div class="sell_more">
               <a
                 href="#"
                 class="d-block text-center text-decoration-none text-dark pb-2 stretched-link"
                 >MORE</a
               >
-            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
@@ -169,13 +167,11 @@
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
             </div>
-            <div class="sell_more">
               <a
                 href="#"
                 class="d-block text-center text-decoration-none text-dark pb-2 "
                 >MORE</a
               >
-            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
@@ -200,13 +196,11 @@
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
             </div>
-            <div class="sell_more">
               <a
                 href="#"
                 class="d-block text-center text-decoration-none text-dark pb-2 "
                 >MORE</a
               >
-            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
@@ -231,13 +225,11 @@
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
             </div>
-            <div class="sell_more">
               <a
                 href="#"
                 class="d-block text-center text-decoration-none text-dark pb-2 ""
                 >MORE</a
               >
-            </div>
           </div>
         </div>
         <div class="col mb-5 mt-7 mb-lg-0">
@@ -262,16 +254,14 @@
                 they lost to the Cleveland Cavaliers in seven games.
               </p>
             </div>
-            <div class="sell_more">
               <a
                 href="#"
                 class="d-block text-center text-decoration-none text-dark pb-2"
                 >MORE</a
               >
-            </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 分頁 -->
       <!-- nav 不加class / 分頁有內建d-flex -->
