--- a/newproduct.html
+++ b/newproduct.html
@@ -79,119 +79,128 @@
         <img
           src="nbaWeb/05284b30a1fda6bcdc09420b5c1e7127.svg"
           height="80"
-          alt="recentlyLogo"
+          alt="NEWlogo"
           class=""
         />
         <h2>PRODUCTS</h2>
       </div>
-      <div class="container px-5">
-        <div class="row row-cols-1 row-cols-lg-12">
-          <!-- 側欄 -->
-          <!-- 上面row響應 下面col也要響應~~~ -->
-          <div class="col col-lg-3 lh-lg aside">
-            <h3 class="text-center text-lg-start">Player</h3>
-            <!-- BS內建margin 很多推不到位 可能要設定0 用開發者看會有淡黃區域 -->
-            <ul
-              class="list-unstyled d-flex flex-lg-column justify-content-around mx-5 my-3 ms-0"
-            >
-              <li>
-                <a class="text-decoration-none d-block" href="#"
-                  ><span class="aside_span"> － </span> All</a
-                >
-              </li>
-              <li>
-                <a class="text-decoration-none d-block" href="#"
-                  ><span class="aside_span"> － </span> Kobe</a
-                >
-              </li>
-              <li>
-                <a class="text-decoration-none d-block" href="#"
-                  ><span class="aside_span"> － </span> Rose</a
-                >
-              </li>
-              <li>
-                <a class="text-decoration-none d-block" href="#"
-                  ><span class="aside_span"> － </span> Durant</a
-                >
-              </li>
-              <li>
-                <a class="text-decoration-none d-block" href="#"
-                  ><span class="aside_span"> － </span> James</a
-                >
-              </li>
-            </ul>
-          </div>
-          <!-- 產品圖 -->
-          <div class="col col-lg-9 mb-5">
-            <div class="row row-cols-2 row-cols-lg-3 g-4">
-              <div class="col overflow-hidden">
-                <div class="card w-100 position-relation" data-num="1">
-                  <div class="new_product_img">
-                    <h6>Player</h6>
-                    <h4>Kobe Bryant</h4>
-                  </div>
-                  <img
-                    data-num="1"
-                    height="312"
-                    width="312"
-                    class="card-img of-cover"
-                    src="nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
-                    alt="new1"
-                  />
+      <!-- class 中有許多是沒有作用的，例如：row-cols-lg-12 ，row本身就是一列的flex，要變一欄再加上row-cols-1即可-->
+      <section class="row row-cols-1 px-5">
+        <!-- 側欄 -->
+        <!-- 上面row響應 下面col也要響應~~~ -->
+        <aside class="col col-lg-3 lh-lg aside">
+          <h3 class="text-center text-lg-start">Player</h3>
+          <!-- BS內建margin 很多推不到位 可能要設定0 用開發者看會有淡黃區域 -->
+          <ul
+            class="list-unstyled d-flex flex-lg-column justify-content-center mx-5 my-3 ms-0"
+          >
+            <li>
+              <a
+                class="text-decoration-none d-block px-3 px-lg-0 py-lg-1"
+                href="#"
+                ><span class="aside_span"> － </span> All</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-decoration-none d-block px-3 px-lg-0 py-lg-1"
+                href="#"
+                ><span class="aside_span"> － </span> Kobe</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-decoration-none d-block px-3 px-lg-0 py-lg-1"
+                href="#"
+                ><span class="aside_span"> － </span> Rose</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-decoration-none d-block px-3 px-lg-0 py-lg-1"
+                href="#"
+                ><span class="aside_span"> － </span> Durant</a
+              >
+            </li>
+            <li>
+              <a
+                class="text-decoration-none d-block px-3 px-lg-0 py-lg-1"
+                href="#"
+                ><span class="aside_span"> － </span> James</a
+              >
+            </li>
+          </ul>
+        </aside>
+        <!-- 產品圖 -->
+        <div class="col col-lg-9 mb-5">
+          <div class="row row-cols-2 row-cols-lg-3 g-4">
+            <div class="col overflow-hidden">
+              <div class="card w-100 position-relation" data-num="1">
+                <div class="new_product_img">
+                  <h6>Player</h6>
+                  <h4>Kobe Bryant</h4>
                 </div>
+                <img
+                  data-num="1"
+                  height="312"
+                  width="312"
+                  class="card-img of-cover"
+                  src="nbaWeb/olivier-collet-H7cIqigZOBo-unsplash.jpg"
+                  alt="new1"
+                />
               </div>
-              <div class="col">
-                <div class="card w-100 position-relation" data-num="2">
-                  <div class="new_product_img">
-                    <h6>Player</h6>
-                    <h4>Derrick Rose</h4>
-                  </div>
-                  <img
-                    data-num="2"
-                    height="312"
-                    width="312"
-                    class="card-img of-cover"
-                    src="nbaWeb/eddy-lackmann-6MmfmBJd8PE-unsplash.jpg"
-                    alt="new2"
-                  />
+            </div>
+            <div class="col">
+              <div class="card w-100 position-relation" data-num="2">
+                <div class="new_product_img">
+                  <h6>Player</h6>
+                  <h4>Derrick Rose</h4>
                 </div>
+                <img
+                  data-num="2"
+                  height="312"
+                  width="312"
+                  class="card-img of-cover"
+                  src="nbaWeb/eddy-lackmann-6MmfmBJd8PE-unsplash.jpg"
+                  alt="new2"
+                />
               </div>
-              <div class="col">
-                <div class="card w-100 position-relation" data-num="3">
-                  <div class="new_product_img">
-                    <h6>Player</h6>
-                    <h4>Kevin Durant</h4>
-                  </div>
-                  <img
-                    data-num="3"
-                    height="312"
-                    width="312"
-                    class="card-img of-cover"
-                    src="nbaWeb/mingxuan_leng-EXqK7oqvKhQ-unsplash.jpg"
-                    alt="new3"
-                  />
+            </div>
+            <div class="col">
+              <div class="card w-100 position-relation" data-num="3">
+                <div class="new_product_img">
+                  <h6>Player</h6>
+                  <h4>Kevin Durant</h4>
                 </div>
+                <img
+                  data-num="3"
+                  height="312"
+                  width="312"
+                  class="card-img of-cover"
+                  src="nbaWeb/mingxuan_leng-EXqK7oqvKhQ-unsplash.jpg"
+                  alt="new3"
+                />
               </div>
-              <div class="col">
-                <div class="card w-100 position-relation" data-num="4">
-                  <div class="new_product_img">
-                    <h6>Player</h6>
-                    <h4>Stephen Curry</h4>
-                  </div>
-                  <img
-                    data-num="4"
-                    height="312"
-                    width="312"
-                    class="card-img of-cover"
-                    src="nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg"
-                    alt="new4"
-                  />
+            </div>
+            <div class="col">
+              <div class="card w-100 position-relation" data-num="4">
+                <div class="new_product_img">
+                  <h6>Player</h6>
+                  <h4>Stephen Curry</h4>
                 </div>
+                <img
+                  data-num="4"
+                  height="312"
+                  width="312"
+                  class="card-img of-cover"
+                  src="nbaWeb/tyler-martoia-nVpT1jeu3f0-unsplash.jpg"
+                  alt="new4"
+                />
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
       <!-- 徵才 -->
       <div class="container-lg border-nbaBlue border-top border-3">
