更改檔名與內容一致(包含連結)

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link px-4 py-3" href="allstarStory.html">Story</a>
+                <a class="nav-link px-4 py-3" href="Story.html">Story</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-4 py-3" href="newproduct.html">Product</a>
+                <a class="nav-link px-4 py-3" href="product.html">Product</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link px-4 py-3" href="allstar.html">Rank</a>
+                <a class="nav-link px-4 py-3" href="rank.html">Rank</a>
               </li>
               <li class="ms-1">
                 <button
@@ -254,7 +254,7 @@
       >
         <a
           type="button"
-          href="newproduct.html"
+          href="product.html"
           class="btn btn-outline-dark rounded-pill fs-5 me-md-3 me-0 mb-3 mb-md-0"
           >SEE MORE PRODUCT</a
         >
@@ -308,7 +308,7 @@
               </p>
             </div>
             <a
-              href="allstarStoryItem.html"
+              href="storyItem.html"
               class="text-center text-decoration-none pb-2 stretched-link text-dark"
               >MORE</a
             >
@@ -335,7 +335,7 @@
               </p>
             </div>
             <a
-              href="allstarStoryItem.html"
+              href="storyItem.html"
               class="text-center text-decoration-none pb-2 stretched-link text-dark"
               >MORE</a
             >
@@ -364,7 +364,7 @@
               </p>
             </div>
             <a
-              href="allstarStoryItem.html"
+              href="storyItem.html"
               class="text-center text-decoration-none pb-2 btn-outline-dark text-dark"
               >MORE</a
             >
@@ -375,7 +375,7 @@
       <div class="text-center">
         <a
           type="button"
-          href="allstarStory.html"
+          href="story.html"
           class="btn btn-outline-dark rounded-pill my-5 fs-5 sellbtn_Rwd"
           >SEE MORE LISTS</a
         >
