--- a/rank.html
+++ b/rank.html
@@ -72,7 +72,7 @@
       </nav>
       <!-- banner -->
       <banner class="allstar_banner bgs-cover"></banner>
-      <!-- allstar -->
+      <!-- ranking -->
       <section
         class="row row-cols-1 row-cols-xl-5 mx-5 my-5 g-3 justify-content-around"
       >
