--- a/story.html
+++ b/story.html
@@ -112,7 +112,7 @@
               </p>
             </div>
               <a
-                href="allstarStoryItem.html"
+                href="storyItem.html"
                 class="d-block text-center text-decoration-none  pb-2 text-dark"
                 >MORE</a
               >
@@ -139,7 +139,7 @@
               </p>
             </div>
               <a
-                href="#"
+                href="storyItem.html"
                 class="d-block text-center text-decoration-none text-dark pb-2 stretched-link"
                 >MORE</a
               >
@@ -168,7 +168,7 @@
               </p>
             </div>
               <a
-                href="#"
+                href="storyItem.html"
                 class="d-block text-center text-decoration-none text-dark pb-2 "
                 >MORE</a
               >
@@ -197,7 +197,7 @@
               </p>
             </div>
               <a
-                href="#"
+                href="storyItem.html"
                 class="d-block text-center text-decoration-none text-dark pb-2 "
                 >MORE</a
               >
@@ -226,7 +226,7 @@
               </p>
             </div>
               <a
-                href="#"
+                href="storyItem.html"
                 class="d-block text-center text-decoration-none text-dark pb-2 ""
                 >MORE</a
               >
@@ -255,7 +255,7 @@
               </p>
             </div>
               <a
-                href="#"
+                href="storyItem.html"
                 class="d-block text-center text-decoration-none text-dark pb-2"
                 >MORE</a
               >
