--- a/storyItem.html
+++ b/storyItem.html
@@ -153,13 +153,12 @@
                 <li class="mb-3">2008</li>
               </ul>
             </div>
-            <button class="btn btn-nbaBlue rounded-pill mx-auto mb-4 btnRwd">
-              <a
-                href="newproduct.html"
-                class="px-5 d-block fs-4 text-white text-decoration-none"
-                >MERCH</a
-              >
-            </button>
+            <a
+              type="button"
+              href="product.html"
+              class="btn btn-nbaBlue rounded-pill fs-4 btnRwd mx-auto mb-4"
+              >MERCH</a
+            >
           </div>
         </div>
       </section>
