修改：首圖太大，在缺少明確 call to action 時，不建議用那麼大的首圖

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="d-flex">
             <a class="navbar-brand" href="index.html">JerseyTown</a>
             <a class="align-self-center text-decoration-none" href="index.html">
-              <h1 class="fs-3 fw-bold mb-0 ms-n2">JTown</h1>
+              <h1 class="fs-3 fw-bold mb-0 ms-n2 nav_h1">JTown</h1>
             </a>
           </div>
           <!-- 漢堡 -->
@@ -58,10 +58,10 @@
               </li>
               <li class="ms-1">
                 <button
-                  class="btn btn-nbaRed rounded-pill mt-lg-2 bg-nbaBlue nav_pill"
+                  class="btn btn-nbaRed rounded-pill my-2 mt-lg-2 bg-nbaBlue nav_pill"
                 >
                   <a
-                    class="text-decoration-none fs-6 px-5 py-1 rounded-pill"
+                    class="text-decoration-none fs-6 px-3 rounded-pill text-white"
                     type="submit"
                     href="customzied.html"
                   >
@@ -130,8 +130,24 @@
           </div>
         </div>
       </banner>
-      <!-- banner -->
-      <!-- <div class="banner bgs-cover"></div> -->
+      <!-- scroll down arrow -->
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="100"
+        height="100"
+        fill="currentColor"
+        class="bi bi-chevron-double-down banner_arrow"
+        viewBox="0 0 16 16"
+      >
+        <path
+          fill-rule="evenodd"
+          d="M1.646 6.646a.5.5 0 0 1 .708 0L8 12.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
+        />
+        <path
+          fill-rule="evenodd"
+          d="M1.646 2.646a.5.5 0 0 1 .708 0L8 8.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"
+        />
+      </svg>
       <!-- 募款 -->
       <!-- row 都加 flex-row 比較清楚~~~ -->
       <section
@@ -309,7 +325,7 @@
             </div>
             <a
               href="storyItem.html"
-              class="text-center text-decoration-none pb-2 stretched-link text-dark"
+              class="text-center text-decoration-none pb-2 stretched-link text-dark rank_a"
               >MORE</a
             >
           </div>
@@ -336,7 +352,7 @@
             </div>
             <a
               href="storyItem.html"
-              class="text-center text-decoration-none pb-2 stretched-link text-dark"
+              class="text-center text-decoration-none pb-2 stretched-link text-dark rank_a"
               >MORE</a
             >
           </div>
@@ -365,7 +381,7 @@
             </div>
             <a
               href="storyItem.html"
-              class="text-center text-decoration-none pb-2 btn-outline-dark text-dark"
+              class="text-center text-decoration-none pb-2 btn-outline-dark text-dark rank_a"
               >MORE</a
             >
           </div>
