背景圖如果只使用一次，可以使用 inline style

--- a/customzied.html
+++ b/customzied.html
@@ -71,7 +71,12 @@
         </div>
       </nav>
       <!-- banner -->
-      <banner class="custom_banner bgp-top bgs-cover"></banner>
+      <section
+        class="custom_banner bgp-top bgs-cover w-100"
+        style="
+          background-image: url(../../nbaWeb/abhay-siby-mathew-LmEuUMbd5Rw-unsplash.jpg);
+        "
+      ></section>
       <!-- 註冊客製化球衣 -->
       <form
         class="card py-5 px-4 col-md-5 needs-validation w-75 mx-auto my-5 shadow border-5 border-nbaBlue border-top border-start-0 border-end-0 border-bottom-0"
