--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <nav class="navbar navbar-expand-md bg-white">
+      <navbar class="navbar navbar-expand-md bg-white">
         <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
             <a class="navbar-brand" href="index.html">JerseyTown</a>
@@ -72,7 +72,7 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </navbar>
       <!-- video banner -->
       <banner
         id="carouselExampleIndicators"
