--- a/rank.html
+++ b/rank.html
@@ -71,7 +71,10 @@
         </div>
       </nav>
       <!-- banner -->
-      <banner class="allstar_banner bgs-cover"></banner>
+      <section
+        class="allstar_banner w-100 bgp-center bgs-cover"
+        style="background-image: url(../../nbaWeb/banner3.jpg)"
+      ></section>
       <!-- ranking -->
       <section
         class="row row-cols-1 row-cols-xl-5 mx-5 my-5 g-3 justify-content-around"
