--- a/storyItem.html
+++ b/storyItem.html
@@ -142,7 +142,10 @@
               class="of-cover op-top position-absolute pt-3 imgRwd"
               alt="..."
             />
-            <div class="allstaritem_back img-fluid bgp-center bgs-cover"></div>
+            <div
+              class="allstaritem_back img-fluid bgp-center bgs-cover"
+              style="background-image: url(../../nbaWeb/1126209.png)"
+            ></div>
             <div class="card-body fs-6">
               <ul class="list-unstyled fsRwd">
                 <li class="text-muted">5× NBA champion</li>
