CSS 命名應避免出現 1, 2, 3…

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="container-xxl">
       <!-- 導覽 -->
-      <navbar class="navbar navbar-expand-md bg-white">
+      <navbar class="navbar navbar-expand-md bg-white py-4">
         <div class="container-fluid d-flex justify-content-between">
           <div class="d-flex">
             <a class="navbar-brand" href="index.html">JerseyTown</a>
@@ -58,7 +58,7 @@
               </li>
               <li class="ms-1">
                 <button
-                  class="btn btn-nbaRed rounded-pill my-2 mt-lg-2 bg-nbaBlue nav_pill"
+                  class="btn btn-nbaRed rounded-pill mt-lg-2 bg-nbaBlue nav_pill"
                 >
                   <a
                     class="text-decoration-none fs-6 px-3 rounded-pill text-white"
@@ -309,7 +309,7 @@
               class="card-img-top of-none op-top position-absolute mt-n5 position-relative"
               alt="..."
             />
-            <div data-num="001" class="img_back img_back001"></div>
+            <div data-num="001" class="img_back img_back_kobe"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">kobe bryant</h3>
               <p class="card-text fs-6">
@@ -339,7 +339,7 @@
               class="card-img-top of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="002" class="img_back img_back002"></div>
+            <div data-num="002" class="img_back img_back_lebron"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">LeBron James</h3>
               <p class="card-text fs-6">
@@ -366,7 +366,7 @@
               class="card-img-top of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="003" class="img_back img_back003"></div>
+            <div data-num="003" class="img_back img_back_curry"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">Stephen Curry</h3>
               <p class="card-text fs-6">
