--- a/story.html
+++ b/story.html
@@ -97,7 +97,7 @@
               class="card-img-top of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="001" class="img_back img_back001"></div>
+            <div data-num="001" class="img_back img_back_kobe"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">kobe bryant</h3>
               <p class="card-text fs-6">
@@ -127,7 +127,7 @@
               class="card-img-top of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="002" class="img_back img_back002"></div>
+            <div data-num="002" class="img_back img_back_lebron"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">LeBron James</h3>
               <p class="card-text fs-6">
@@ -154,7 +154,7 @@
               class="card-img-top of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="003" class="img_back img_back003"></div>
+            <div data-num="003" class="img_back img_back_curry"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">Stephen Curry</h3>
               <p class="card-text fs-6">
@@ -183,7 +183,7 @@
               class="card-img-top of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="004" class="img_back img_back004"></div>
+            <div data-num="004" class="img_back img_back_westbrook"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">Russlue Westbrook</h3>
               <p class="card-text fs-6">
@@ -212,7 +212,7 @@
               class="card-img-top of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="005" class="img_back img_back005"></div>
+            <div data-num="005" class="img_back img_back_irving"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">Krie Irving</h3>
               <p class="card-text fs-6">
@@ -241,7 +241,7 @@
               class="card-img-top of-none op-top position-absolute mt-n5"
               alt="..."
             />
-            <div data-num="006" class="img_back img_back006"></div>
+            <div data-num="006" class="img_back img_back_wall"></div>
             <div class="card-body">
               <h3 class="card-title fw-bold fs-6">John Wall</h3>
               <p class="card-text fs-6">
