--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JerseyTown</title>
 
+    <meta name="description" content="用球衣蓋起來的城鎮" />
+    <meta
+      name="keywords "
+      content="球衣,城鎮,用球衣蓋的城鎮,Jersey,Town,JTown"
+    />
+    <meta property="og:title" content="JerseyTown" />
+    <meta property="og:description" content="球衣,用球衣蓋的城鎮,JerseyTown" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://JerseyTown.com.tw" />
+    <meta
+      property="og:image"
+      src="./nbaWeb/1588928235basketball-fire-logo-silhouette-freesvg.org.svg"
+    />
+    <!-- 標題欄： -->
+    <link rel="icon" href="./nbaWeb/favicon.ico" type="image/x-icon" />
+    <!-- 收藏夾： -->
+    <link rel="shortcut icon" href="./nbaWeb/favicon.ico" type="image/x-icon" /
+    >
+
     <link rel="stylesheet" href="./stylesheets/main.css" />
   </head>
 
