燈箱記錄點

--- a/index.html
+++ b/index.html
@@ -170,19 +170,21 @@
       <!-- 募款 -->
       <!-- row 都加 flex-row 比較清楚~~~ -->
       <section
-        id="Service"
         class="flex-lg-row flex-column-reverse d-flex justify-content-center align-items-center row-cols-1 row-cols-lg-2 pt-5 mx-6 px-0 px-lg-7 g-5"
       >
         <div
           class="col d-flex align-items-center justify-content-center me-md-5"
         >
-          <img
-            class="of-cover w-100"
-            height="486"
-            width="648"
-            src="../nbaWeb/andre-hunter-RPKdvPcYAUo-unsplash.jpg"
-            alt="義賣球衣"
-          />
+          <div class="img_relative">
+            <div class="love_img_back"></div>
+            <img
+              class="of-cover w-100 love_img"
+              height="486"
+              width="648"
+              src="../nbaWeb/andre-hunter-RPKdvPcYAUo-unsplash.jpg"
+              alt="義賣球衣"
+            />
+          </div>
         </div>
         <div class="col">
           <div class="money w-100">
@@ -219,7 +221,7 @@
       </div>
       <section class="row row-cols-2 row-cols-lg-4 g-4 px-3">
         <div class="col overflow-hidden">
-          <div class="card w-100 position-relation" data-num="1">
+          <div class="card w-100 position-relation product_hover" data-num="1">
             <div class="new_product_img">
               <h6>Player</h6>
               <h4>Kobe Bryant</h4>
@@ -235,7 +237,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card w-100 position-relation" data-num="2">
+          <div class="card w-100 position-relation product_hover" data-num="2">
             <div class="new_product_img">
               <h6>Player</h6>
               <h4>Derrick Rose</h4>
@@ -251,7 +253,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card w-100 position-relation" data-num="3">
+          <div class="card w-100 position-relation product_hover" data-num="3">
             <div class="new_product_img">
               <h6>Player</h6>
               <h4>Kevin Durant</h4>
@@ -267,7 +269,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card w-100 position-relation" data-num="4">
+          <div class="card w-100 position-relation product_hover" data-num="4">
             <div class="new_product_img">
               <h6>Player</h6>
               <h4>Stephen Curry</h4>
