--- a/product.html
+++ b/product.html
@@ -135,7 +135,10 @@
         <div class="col col-lg-9 mb-5">
           <div class="row row-cols-2 row-cols-lg-3 g-4">
             <div class="col overflow-hidden">
-              <div class="card w-100 position-relation" data-num="1">
+              <div
+                class="card w-100 position-relation product_hover"
+                data-num="1"
+              >
                 <div class="new_product_img">
                   <h6>Player</h6>
                   <h4>Kobe Bryant</h4>
@@ -151,7 +154,10 @@
               </div>
             </div>
             <div class="col">
-              <div class="card w-100 position-relation" data-num="2">
+              <div
+                class="card w-100 position-relation product_hover"
+                data-num="2"
+              >
                 <div class="new_product_img">
                   <h6>Player</h6>
                   <h4>Derrick Rose</h4>
@@ -167,7 +173,10 @@
               </div>
             </div>
             <div class="col">
-              <div class="card w-100 position-relation" data-num="3">
+              <div
+                class="card w-100 position-relation product_hover"
+                data-num="3"
+              >
                 <div class="new_product_img">
                   <h6>Player</h6>
                   <h4>Kevin Durant</h4>
@@ -183,7 +192,10 @@
               </div>
             </div>
             <div class="col">
-              <div class="card w-100 position-relation" data-num="4">
+              <div
+                class="card w-100 position-relation product_hover"
+                data-num="4"
+              >
                 <div class="new_product_img">
                   <h6>Player</h6>
                   <h4>Stephen Curry</h4>
